--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -136,6 +136,18 @@ button:hover {
   display: none;
 }
 
+.participants-list {
+  list-style: none;
+  margin: 10px 0;
+  padding-left: 10px;
+  font-size: 0.9em;
+  color: #666;
+}
+
+.participants-list li {
+  margin-bottom: 4px;
+}
+
 footer {
   text-align: center;
   margin-top: 30px;
